#62 fix footer bug on safari / IE

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -4,20 +4,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-header, footer {
-  flex-shrink: 0;
-}
-
-main {
-  flex: 1 0 auto;
-}
-
 /* Wordpress hack to handle fixed menu and admin bar */
 .admin-bar .navbar.fixed-top {
   top: 32px;
