--- a/src/styles/partials/_fiches-map.scss
+++ b/src/styles/partials/_fiches-map.scss
@@ -29,6 +29,6 @@
     top: $header-height;
     right: 0;
     width: 50%;
-    z-index: 0;
+    z-index: -1;
   }
 }
